Drop everything before package.