@@ -1,10 +1,3 @@
-/**
- * DTONotifieringResultat.java
- *
- * This file was auto-generated from WSDL
- * by the Apache Axis 1.3 Oct 05, 2005 (05:23:37 EDT) WSDL2Java emitter.
- */
-
 package se.csn.webservice.bas.notmotor.skicka;
 
 import java.io.Serializable;
@@ -137,7 +130,7 @@ public class DTONotifieringResultat  implements Serializable {
         }
         __hashCodeCalc = true;
         int _hashCode = 1;
-        _hashCode += new Long(getMeddelandeId()).hashCode();
+        _hashCode += Long.valueOf(getMeddelandeId()).hashCode();
         if (getResultat() != null) {
             _hashCode += getResultat().hashCode();
         }
